# hidspx_posix

./: README
hidspx_posix/: AUTHORS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.org  avrspx.c  avrspx.h  config.h  config.h.in  configure  configure.in  hidasp.c  hidasp.h  hidcmd.h  hidspx_posix.1  hwctrl.c  hwctrl_posix.c  main.c  usbasp.c  usbasp.h  utils.c
hidspx_posix.xcodeproj/: project.pbxproj
